--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -105,26 +105,26 @@ body {
 
 #details {
     position: absolute;
-    bottom: 3%;
-    left: 2%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    top: 2%;
+    right: 2%;
     pointer-events: none;  /* This div is just a container--do not let it interfere with operation of the map. */
-}
-
-#earth {
-    font-size: 2.4rem;
+    text-align: right;
 }
 
 #status, #location, #menu {
     font-size: 1.75rem;
 }
 
-#status, #location, #earth {
-    background-color: rgba(0, 0, 5, 0.6);
+#status, #location, #earth, #timeline {
+    background-color: rgba(5, 10, 30, 0.85);
     border-radius: 0.5rem/0.5rem;
-    display: table;
     margin-top: 1rem;
     padding: 0 1rem 0 1rem;
     pointer-events: all;
+    font-size: 2rem;
 }
 
 #menu {
