--- a/public/templates/index.html
+++ b/public/templates/index.html
@@ -37,6 +37,11 @@
     </div>
     <div id="details">
         <p id="status"></p>
+        <p id="earth">
+            <span id="show-menu" class="text-button" title="menu">Display Settings</span>
+            <span id="progress" class="invisible"></span>
+        </p>
+
         <div id="location">
             <p>
                 <span id="location-coord"></span>
@@ -51,11 +56,6 @@
                 <span id="location-value-units" class="text-button"></span>
             </p>
         </div>
-
-        <p id="earth">
-            <span id="show-menu" class="text-button" title="menu">{{__('rocketearth')}}</span>
-            <span id="progress" class="invisible"></span>
-        </p>
 
         <div id="menu" class="invisible">
             <p>{{__('Date')}} | <span
