add launch-info menu placeholder; add skeleton backbone model/view; add splash page

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -127,7 +127,7 @@ body {
     font-size: 2rem;
 }
 
-#menu {
+#menu, #launch-info {
     background-color: rgba(5, 10, 30, 0.85);
     border-radius: 0.5rem/0.5rem;
     overflow: hidden;
@@ -141,7 +141,7 @@ body {
     -webkit-transition: opacity 250ms ease, max-height 250ms ease, margin-top 250ms ease;
 }
 
-#menu.invisible {
+#menu.invisible, #launch-info.invisible {
     margin-top: 0;
     padding: 0 1rem 0 1rem;
     opacity: 0;
