--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -38,9 +38,16 @@ body {
 }
 
  #container {
+    width: 100%;
     min-height: 100%;
     position: relative;
+ }
+
+/*
+#left, #right {
+    width: 25%;
 }
+*/
 
 a, .text-button {
     color: #888888;
@@ -137,7 +144,7 @@ body {
     font-size: 1rem;
 }
 
-#menu, #launch-info {
+#menu, #launch-info, #mission-info {
     background-color: rgba(5, 10, 30, 0.85);
     border-radius: 0.5rem/0.5rem;
     overflow: hidden;
@@ -151,7 +158,7 @@ body {
     -webkit-transition: opacity 250ms ease, max-height 250ms ease, margin-top 250ms ease;
 }
 
-#menu.invisible, #launch-info.invisible {
+#menu.invisible, #launch-info.invisible, #mission-info.invisible {
     margin-top: 0;
     padding: 0 1rem 0 1rem;
     opacity: 0;
